Upadating the service layer